# gitize

./: .psrc.ps1  README.md  http_cache.sqlite  pyproject.toml
src/gitize/: __init__.py  cli.py  external.py  hook.py
src/gitize/template/: prj.toml
template/: prj.toml
template/prj/: .gitignore  .psrc.ps1
